--- a/frontend/src/components/AddPlayerForm/AddPlayerForm.module.css
+++ b/frontend/src/components/AddPlayerForm/AddPlayerForm.module.css
@@ -1,21 +1,10 @@
 .form {
   display: flex;
   flex-direction: column;
+  margin-top: 1rem;
   gap: 1rem;
 }
 
-/* ===== Title ===== */
-.title {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  font-size: 12px;
-  color: var(--text-main);
-  text-align: center;
-}
-
-/* ===== Input ===== */
 .input {
   padding: 0.75rem 1rem;
   font-size: 1rem;
