--- a/frontend/src/components/FilteredGameList/FilteredGameList.module.css
+++ b/frontend/src/components/FilteredGameList/FilteredGameList.module.css
@@ -4,3 +4,11 @@
   align-items: center;
   padding: 20px;
 }
+
+.filteredList {
+  height: fit-content;
+  width: 100%;
+  max-height: 300px;
+  overflow: hidden;
+  overflow-y: auto;
+}
